fix: adjust label margin for better alignment in Reg.css

--- a/src/Reg.css
+++ b/src/Reg.css
@@ -136,5 +136,5 @@
     text-decoration: underline;
   }
   label{
-    margin-left: -160px;
+    margin-left: 0px;
   }
